--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.4.4",
-    "@react-navigation/bottom-tabs": "^7.12.0",
+    "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.28",
+    "@react-navigation/native": "^7.1.8",
     "@react-navigation/stack": "^7.7.1",
     "@tailwindcss/vite": "^4.1.18",
     "expo": "~54.0.33",
@@ -39,20 +39,22 @@
     "react-dom": "^19.1.0",
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1314.0",
+    "react-native-css-interop": "^0.2.1",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.2",
     "react-native-worklets": "0.5.1",
-    "tailwindcss": "^3.4.19"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.29.0",
     "@babel/preset-env": "^7.29.0",
     "@babel/preset-react": "^7.28.5",
     "@types/react": "~19.1.0",
+    "@types/react-native": "^0.72.8",
     "@types/react-native-vector-icons": "^6.4.18",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
